--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 [project]
 name = "mcs-chatbot"
-version = "0.1.0"
+version = "2.1.11"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "black>=25.9.0",
-    "isort>=7.0.0",
+    "langchain>=1.0.3",
+    "langchain-openai>=1.0.2",
+    "langgraph>=1.0.2",
+    "python-dotenv>=1.2.1",
 ]
