file created user intent handler

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.121.0",
     "httpx>=0.28.1",
     "langchain>=1.0.3",
+    "langchain-core>=1.0.3",
     "langchain-openai>=1.0.2",
     "langgraph>=1.0.2",
     "numpy>=2.3.4",
